tests/frontend/fail/array/bad_deref.act
constructor of A
interface constructor()

creates

  uint x :=  1

ensures
  x[1] == 2
